# os

./: CMakeLists.txt  a20.asm  bochsrc.txt  boot-sect.asm  idt-flush.asm  idt-handlers.asm  int-types.h  io.cc  io.h  isr.c  isr.cc  isr.h  kernel-entry.c  kernel-entry.cc  kernel.c  kernel.cc  linker.ld  print-string.asm  read-disk.asm  switch-to-32-protected-mode.asm  switch-to-64-long-mode.asm
